[gd_scene load_steps=15 format=3 uid="uid://dskax4eb4kaom"]

[ext_resource type="Texture2D" uid="uid://d337826vww2yt" path="res://Texture/Environment/Props/Static/Trees/Model_03/Size_05.png" id="1_b0kcf"]
[ext_resource type="Script" uid="uid://cyhp6owqk18qj" path="res://Scripts/Objects/tree.gd" id="1_s0hs7"]
[ext_resource type="Shader" uid="uid://plt5r7yv036c" path="res://Assets/hit_flash.tres" id="2_okh6b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s0hs7"]
resource_local_to_scene = true
shader = ExtResource("2_okh6b")
shader_parameter/enable = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebggc"]
atlas = ExtResource("1_b0kcf")
region = Rect2(0, 0, 128, 256)

[sub_resource type="CircleShape2D" id="CircleShape2D_s0hs7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okh6b"]
size = Vector2(20, 30)

[sub_resource type="Animation" id="Animation_pfr00"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_h1ld1"]
resource_name = "hit_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q1hkj"]
_data = {
&"RESET": SubResource("Animation_pfr00"),
&"hit_flash": SubResource("Animation_h1ld1")
}

[sub_resource type="Animation" id="Animation_okh6b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s0hs7"]
resource_name = "get_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(3.6, 0.3),
"update": 0,
"values": [Vector2(-2, -3), Vector2(-26, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(3.6, 0.3),
"update": 0,
"values": [0.0, -1.23918]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c6qhw"]
resource_name = "hit_get"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(3.6, 0.3),
"update": 0,
"values": [Vector2(-2, -3), Vector2(24, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(3.6, 0.3),
"update": 0,
"values": [0.0, 1.23918]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mj441"]
_data = {
&"RESET": SubResource("Animation_okh6b"),
&"get_hit": SubResource("Animation_s0hs7"),
&"hit_get": SubResource("Animation_c6qhw")
}

[node name="Tree" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_s0hs7")
metadata/_edit_horizontal_guides_ = []

[node name="Body" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_s0hs7")
position = Vector2(-2, -3)
texture = SubResource("AtlasTexture_ebggc")
offset = Vector2(1, -115)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("CircleShape2D_s0hs7")

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2(-1, 117)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, -121)
shape = SubResource("RectangleShape2D_okh6b")

[node name="hit_flash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q1hkj")
}

[node name="TreeAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mj441")
}

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="hurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="animation_finished" from="TreeAnimation" to="." method="_on_tree_animation_animation_finished"]
